Overflow fixed

--- a/src/components/intro/introduction.css
+++ b/src/components/intro/introduction.css
@@ -160,6 +160,7 @@
 @media screen and (max-width: 600px) {
   .main {
     flex-direction: column;
+    overflow: hidden;
     height: 90dvh;
     padding: 0;
   }
